force-app/main/default/objects/Partner_Maturity_Level__c/Partner_Maturity_Level__c.object-meta.xml
<CustomObject>
    <label>Partner Maturity Level</label>
    <nameField>
        <label>Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Maturity Levels</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>