force-app/main/default/objects/Partner_Maturity_Level__c/fields/Account_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner&apos;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Maturity_Levels</relationshipName>
    <type>Lookup</type>
</CustomField>