force-app/main/default/objects/Partner_Maturity_Level__c/fields/Approval_Requester__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Maturity_Levels_Req</relationshipName>
    <type>Lookup</type>
</CustomField>