force-app/main/default/objects/Partner_Maturity_Level__c/fields/Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comments__c</fullName>
    <label>Approver Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>