force-app/main/default/objects/Partner_Maturity_Level__c/fields/Complete_Actions__c.field-meta.xml
<CustomField>
    <fullName>Complete_Actions__c</fullName>
    <label>Complete Actions</label>
    <summaryFilterItems>
        <field>Partner_Maturity_Status__c.Date_Completed__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Partner_Maturity_Status__c.Status__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Partner_Maturity_Status__c.Action_Owner__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Partner_Maturity_Status__c.EST_Complete_Date__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Partner_Maturity_Status__c.Partner_Maturity_Level__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>