force-app/main/default/objects/Partner_Maturity_Level__c/fields/LEVEL_Code__c.field-meta.xml
<CustomField>
    <fullName>LEVEL_Code__c</fullName>
    <externalId>true</externalId>
    <label>LEVEL Code</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>