force-app/main/default/objects/Partner_Maturity_Level__c/fields/No_of_Actions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Actions__c</fullName>
    <label>No of Actions</label>
    <summaryForeignKey>Partner_Maturity_Status__c.Partner_Maturity_Level__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>